argocd/argo-workflows/templates/ingress.tpl.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflow-server
  annotations:
    ingress.kubernetes.io/rewrite-target: /$2
    ingress.kubernetes.io/protocol: https # Traefik
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: argo-workflow-server
              servicePort: 2746
            path: /argo(/|$)(.*)
            pathType: Prefix
